set python interpreter

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -11,6 +11,7 @@
 # documentation: https://docs.ansible.com/ansible/latest/reference_appendices/config.html.
 
 [defaults]
+interpreter_python = auto
 inventory       = inventory
 library         = plugins/modules
 module_utils    = plugins/module_utils
