--- a/ansible.cfg
+++ b/ansible.cfg
@@ -267,8 +267,8 @@ fact_caching_connection = facts
 # You can enable this feature by setting retry_files_enabled to True
 # and you can change the location of the files by setting retry_files_save_path
 #
-#retry_files_enabled = False
-#retry_files_save_path = ~/.ansible-retry
+retry_files_enabled = True
+retry_files_save_path = .ansible-retry
 
 # prevents logging of task data, off by default
 #no_log = False
