--- a/k8s-cleanup.yaml
+++ b/k8s-cleanup.yaml
@@ -14,6 +14,7 @@
           - docker-ce-cli
           - containerd.io
           - keepalived
+          - haproxy
         state: absent
 
     - name: recover swap setting
