--- a/roles/os_init/tasks/4_tune_kernel_param.yaml
+++ b/roles/os_init/tasks/4_tune_kernel_param.yaml
@@ -1,1 +1,8 @@
 ---
+- name: install kernel params config file
+  copy:
+    src: kernel.conf
+    dest: /etc/sysctl.d/
+
+- name: sysctl enable
+  shell: sysctl -p /etc/sysctl.d/kernel.conf
