--- a/roles/os_init/tasks/main.yaml
+++ b/roles/os_init/tasks/main.yaml
@@ -4,3 +4,5 @@
 - import_tasks: 3_install_update_package.yaml
 - import_tasks: 4_tune_kernel_param.yaml
 - import_tasks: 5_config_NTP.yaml
+- import_tasks: 6_hosts_swap.yaml
+- import_tasks: 7_reboot_hosts.yaml
