os_init ntp and kernel part update

--- a/roles/os_init/tasks/4_tune_kernel_param.yaml
+++ b/roles/os_init/tasks/4_tune_kernel_param.yaml
@@ -4,5 +4,8 @@
     src: kernel.conf
     dest: /etc/sysctl.d/
 
+- name: load br_netfilter module
+  command: modprobe br_netfilter
+
 - name: sysctl enable
   shell: sysctl -p /etc/sysctl.d/kernel.conf
