--- a/roles/os_init/tasks/1_disable_selinux.yaml
+++ b/roles/os_init/tasks/1_disable_selinux.yaml
@@ -12,3 +12,9 @@
     path: /etc/selinux/config
     regexp: "^SELINUX=(enforcing|permissive)"
     replace: "SELINUX=disabled"
+
+- name: close firewalld # need to close firewalld
+  systemd:
+    name: firewalld
+    state: stopped
+    enabled: no
