add iscsi utility

--- a/roles/os_init/tasks/3_install_update_package.yaml
+++ b/roles/os_init/tasks/3_install_update_package.yaml
@@ -18,4 +18,11 @@
       - openssh
       - iptables-services
       - python-docker
+      - iscsi-initiator-utils
     state: latest
+
+- name: start and enable iscsi daemon
+  systemd:
+    name: iscsid
+    state: started
+    enabled: yes
