add post config role

--- a/k8s-HA-cluster-setup.yaml
+++ b/k8s-HA-cluster-setup.yaml
@@ -26,3 +26,8 @@
   hosts: worker_nodes
   roles:
     - worker_join
+
+- name: post config for master nodes
+  hosts: master_nodes
+  roles:
+    - post_config
