Install ipvs packages

--- a/roles/os_init/tasks/3_install_update_package.yaml
+++ b/roles/os_init/tasks/3_install_update_package.yaml
@@ -19,6 +19,8 @@
       - iptables-services
       - python-docker
       - iscsi-initiator-utils
+      - ipvsadm
+      - ipvsset
     state: latest
 
 - name: start and enable iscsi daemon
