update remove taint part

--- a/roles/post_config/tasks/2_remove_taints.yaml
+++ b/roles/post_config/tasks/2_remove_taints.yaml
@@ -1,3 +1,4 @@
 ---
 - name: remove taint of current host
-  command: "kubectl taint nodes {{ inventory_hostname }} node-role.kubernetes.io/master=:NoSchedule-"
+  command: "kubectl taint nodes --all node-role.kubernetes.io/master=:NoSchedule-"
+  run_once: yes
