increase timeout value

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -50,7 +50,7 @@ gathering = smart
 # timeout to something more suitable for the
 # environment.
 #
-#gather_timeout = 10
+gather_timeout = 180
 
 # Ansible facts are available inside the ansible_facts.* dictionary
 # namespace. This setting maintains the behaviour which was the default prior
@@ -99,7 +99,7 @@ gathering = smart
 #error_on_missing_handler = True
 
 # Default timeout for connection plugins
-#timeout = 10
+timeout = 60
 
 # Default user to use for playbooks if user is not specified
 # Uses the connection plugin's default, normally the user currently executing Ansible,
